# solarisx

./: .env.example  Makefile  README.md  docker-compose.yml  final_pytest.txt  out.txt  pyproject.toml  pytest_test_out.txt
frontend/src/: types.ts
frontend/src/hooks/: useCourtQueue.ts  useGraphData.ts  useHealth.ts  useMemories.ts  useTimeline.ts
frontend/src/store/: uiStore.ts
memora/agent/: context_builder.py  memora_agent.py
memora/api/: app.py  dependencies.py  middleware.py  turn_distillation.py
memora/core/: config.py  events.py
memora/court/: judge_agent.py
memora/experience/: failure_logger.py
memora/llm/: groq_client.py
memora/retrieval/: experience_learner.py  symbolic_retriever.py
memora/scheduler/: ingestion_pipeline.py
memora/storage/: __init__.py
memora/vault/: episodic_repo.py  kg_repo.py  mem_cube.py  provenance.py  quarantine_repo.py  semantic_repo.py  tier_router.py  timeline_writer.py  ttl_manager.py  vault_event_writer.py
scripts/: seed_demo_data.py
specs/: 00_SPEC_INDEX.md
specs/agent/: SPEC_agent_llm_experience.md
specs/api/: SPEC_api.md
specs/core/: SPEC_errors_config_interfaces.md  SPEC_events.md  SPEC_types.md
specs/court/: SPEC_court.md
specs/frontend/: SPEC_frontend.md
specs/retrieval/: SPEC_retrieval.md
specs/scheduler/: SPEC_scheduler.md
specs/scripts/: SPEC_scripts_and_integration.md
specs/storage/: SPEC_storage.md
specs/tests/: SPEC_tests.md
specs/vault/: SPEC_vault.md
tests/: conftest.py  test_core_basic.py
tests/integration/: test_agent_conversation.py  test_court_to_vault.py
tests/unit/: test_contradiction_detector.py  test_experience_learner.py  test_hybrid_retriever.py  test_mem_cube.py  test_tier_router.py
(+27 files in other folders)
