[tool.poetry]
name = "memora"
version = "0.1.0"
description = "Persistent Memory for Long-Running Agents"
authors = ["MEMORA Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pgvector = "^0.3"
neo4j = "^5.27"
anthropic = "^0.40"
openai = "^1.55"
sentence-transformers = "^3.3"
pydantic = "^2.10"
pydantic-settings = "^2.6"
networkx = "^3.4"
numpy = "^2.2"
python-dotenv = "^1.0"
redis = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.28"
black = "^24.10"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
